<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:enabled="true"
        android:iconTint="@color/bottom_nav_icon_tint"
        android:title="@string/home"/>
    <item
        android:id="@+id/nav_pt"
        android:icon="@drawable/ic_pt"
        android:iconTint="@color/bottom_nav_icon_tint"
        android:enabled="true"
        android:title="@string/programmable"/>

    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history"
        android:enabled="true"
        android:iconTint="@color/bottom_nav_icon_tint"
        android:title="@string/history"/>

    <item
        android:id="@+id/nav_provideos"
        android:icon="@drawable/ic_pro"
        android:enabled="true"
        android:iconTint="@color/bottom_nav_icon_tint"
        android:title="@string/kayak_pro"/>

</menu>