<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".ui.login.activity.LoginActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:id="@+id/tv_signin"
        android:layout_marginTop="@dimen/_12sdp"
        android:textSize="@dimen/_22ssp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="@font/bricolage_grotesque_regular"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        app:boxStrokeColor="@android:color/white"
        app:boxStrokeWidth="2dp"
        app:hintEnabled="false"
        app:layout_constraintWidth_percent="0.63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signin">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_email"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            android:drawablePadding="@dimen/_8sdp"
            android:drawableStart="@drawable/ic_user"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/bricolage_grotesque_regular"
            android:textSize="@dimen/_12ssp"
            android:background="@drawable/bg_input_text"
            android:textColor="@android:color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pswd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@android:color/white"
        app:boxStrokeWidth="2dp"
        app:endIconMode="password_toggle"
        app:endIconTint="#50ffffff"
        app:hintEnabled="false"
        app:layout_constraintWidth_percent="0.63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_pswd"
            android:hint="@string/pswd"
            android:textColorHint="@color/white"
            android:drawablePadding="@dimen/_8sdp"
            android:drawableStart="@drawable/ic_pswd"
            android:inputType="textPassword"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/bricolage_grotesque_regular"
            android:background="@drawable/bg_input_text"
            android:textColor="@android:color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_frgt_pswd"
        android:text="@string/forgot_pswd"
        android:layout_marginTop="@dimen/_4sdp"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@+id/til_pswd"
        app:layout_constraintEnd_toEndOf="@id/til_pswd"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_6sdp"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_next"
        android:id="@+id/iv_next"
        app:layout_constraintEnd_toEndOf="@+id/tv_frgt_pswd"
        app:layout_constraintTop_toBottomOf="@+id/tv_frgt_pswd"
        app:layout_constraintBottom_toTopOf="@+id/iv_logo"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_dnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dnt_have"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/iv_next"
        app:layout_constraintEnd_toEndOf="@+id/iv_next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_next"
        app:layout_constraintTop_toTopOf="@+id/iv_next" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_4sdp"
        android:gravity="center_vertical"
        android:text="@string/register"
        android:textColor="@color/golden_fizz"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_dnt"
        app:layout_constraintStart_toEndOf="@+id/tv_dnt"
        app:layout_constraintTop_toBottomOf="@+id/iv_next"
        app:layout_constraintTop_toTopOf="@+id/iv_next"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
