<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_main"
    tools:context=".ui.login.fragments.QuickStart">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/_200dp"
    android:id="@+id/ll_quick_start"
    android:layout_marginTop="@dimen/_80dp"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_or"
        android:background="@color/cod_gray"
        android:layout_marginLeft="@dimen/_32dp"
        android:layout_marginRight="@dimen/_32dp"
        android:layout_toStartOf="@+id/tv_or"
        android:id="@+id/rl_time"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/time"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp"
            android:fontFamily="@font/bricolage_grotesque_regular"
            android:layout_marginTop="@dimen/_8dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/_8dp"
            android:fontFamily="@font/bricolage_grotesque_regular"
            android:text="@string/five"
            android:id="@+id/tv_time_value"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_arrow"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_16dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_down"/>



      <!--  <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:theme="@style/SpinnerTheme"
            android:layout_toEndOf="@+id/tv_time_value"
            android:id="@+id/sp_time"/>-->
        <!--            android:background="@drawable/ic_down"-->

    </RelativeLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_or"
        android:text="@string/or"
        android:textColor="@color/white"
        android:layout_centerInParent="true" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_200dp"
        android:background="@color/cod_gray"
        android:layout_toEndOf="@+id/tv_or"
        android:layout_marginLeft="@dimen/_32dp"
        android:layout_marginRight="@dimen/_32dp"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/distance"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp"
            android:fontFamily="@font/bricolage_grotesque_regular"
            android:layout_marginTop="@dimen/_8dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/_8dp"
            android:fontFamily="@font/bricolage_grotesque_regular"
            android:text="@string/five"
            android:id="@+id/tv_distance_value"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/tv_distance_value"
            android:theme="@style/SpinnerTheme"
            android:id="@+id/sp_distance"/>
        <!--            android:background="@drawable/ic_down"-->

    </RelativeLayout>



</RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rv_spinner"
        android:layout_marginTop="@dimen/_180dp"
        android:layout_centerHorizontal="true"

        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>








    <com.google.android.material.button.MaterialButton
        android:layout_width="@dimen/_280dp"
        android:layout_height="52dp"
        android:id="@+id/btn_start"
        android:text="@string/start"
        android:textAllCaps="false"
        android:backgroundTint="@color/golden_fizz"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/_8dp"
        android:textStyle="normal"
        android:layout_marginBottom="@dimen/_24dp"
        android:fontFamily="@font/bricolage_grotesque_regular"
        android:layout_marginTop="@dimen/_24dp"
        android:layout_below="@+id/ll_quick_start"
        android:layout_centerInParent="true"
         />

</RelativeLayout>