<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".ui.login.activity.LoginActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/bricolage_grotesque_regular"
        android:text="@string/reset_pswd"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="0dp"
        android:id="@+id/rl_email"
        android:layout_height="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:background="@drawable/bg_input_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.70"
        app:layout_constraintStart_toStartOf="parent"
        >

        <ImageView
            android:layout_width="@dimen/_14sdp"
            android:layout_height="@dimen/_14sdp"
            android:id="@+id/iv_user"
            android:layout_marginStart="@dimen/_8sdp"
            android:src="@drawable/ic_user"
            android:layout_centerVertical="true"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:fontFamily="@font/bricolage_grotesque_regular"
            android:hint="@string/otp"
            android:imeOptions="actionNext"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_toEndOf="@+id/iv_user"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_11ssp" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="@dimen/_32sdp"
        android:id="@+id/rl_pswd"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/bg_input_text"
        app:layout_constraintTop_toBottomOf="@+id/rl_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.70"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="@dimen/_14sdp"
            android:layout_height="@dimen/_14sdp"
            android:id="@+id/iv_pswd"
            android:layout_marginStart="@dimen/_8sdp"
            android:src="@drawable/ic_pswd"
            android:layout_centerVertical="true"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_pswd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_input_text"
            android:layout_marginStart="@dimen/_6sdp"
            android:fontFamily="@font/bricolage_grotesque_regular"
            android:hint="@string/pswd"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:layout_toStartOf="@+id/iv_pswd_view"
            android:textColor="@android:color/white"
            android:textColorHint="@color/white"
            android:layout_toEndOf="@+id/iv_pswd"
            android:textSize="@dimen/_11ssp" />
        <ImageView
            android:layout_width="@dimen/_14sdp"
            android:layout_height="@dimen/_14sdp"
            android:id="@+id/iv_pswd_view"
            android:layout_marginEnd="@dimen/_8sdp"
            android:src="@drawable/ic_close_eye"
            app:tint="@color/pswd_toggle"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="@dimen/_32sdp"
        android:id="@+id/rl_cnfm_pswd"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/bg_input_text"
        app:layout_constraintTop_toBottomOf="@+id/rl_pswd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.70"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_14sdp"
            android:layout_height="@dimen/_14sdp"
            android:id="@+id/iv_cnfm_pswd"
            android:layout_marginStart="@dimen/_8sdp"
            android:src="@drawable/ic_pswd"
            android:layout_centerVertical="true"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_cnfm_pswd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_input_text"
            android:layout_marginStart="@dimen/_6sdp"
            android:fontFamily="@font/bricolage_grotesque_regular"
            android:hint="@string/cnfm_pswd"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:layout_toStartOf="@+id/iv_cnfmpswd_view"
            android:textColor="@android:color/white"
            android:textColorHint="@color/white"
            android:layout_toEndOf="@+id/iv_cnfm_pswd"
            android:textSize="@dimen/_11ssp" />
        <ImageView
            android:layout_width="@dimen/_14sdp"
            android:layout_height="@dimen/_14sdp"
            android:id="@+id/iv_cnfmpswd_view"
            android:layout_marginEnd="@dimen/_8sdp"
            android:src="@drawable/ic_close_eye"
            app:tint="@color/pswd_toggle"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>


    <androidx.appcompat.widget.AppCompatCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/rl_cnfm_pswd"
        android:paddingStart="@dimen/_2sdp"
        android:id="@+id/chk_optout"
        android:visibility="invisible"
        android:layout_marginTop="@dimen/_8dp"
        android:button="@drawable/bg_checkbox_selector"
        android:textSize="@dimen/_8ssp"
        android:buttonTint="@null"
        android:checked="false"
        android:bufferType="normal"
        app:layout_constraintStart_toStartOf="@+id/rl_cnfm_pswd"
        android:theme="@style/CustomCheckBox"
        android:text="@string/opt_out"
        android:textColor="@color/white"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_6sdp"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_next"
        android:layout_width="@dimen/_32sdp"
        android:layout_height="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_24sdp"
        app:layout_constraintTop_toBottomOf="@id/rl_cnfm_pswd"
        app:layout_constraintEnd_toEndOf="@+id/rl_cnfm_pswd"
        app:srcCompat="@drawable/ic_next" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_already"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/already_have"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/iv_next"
        app:layout_constraintEnd_toEndOf="@+id/iv_next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_next"
        app:layout_constraintTop_toTopOf="@+id/iv_next" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_4sdp"
        android:gravity="center_vertical"
        android:text="@string/login"
        android:textColor="@color/golden_fizz"
        android:textSize="@dimen/_10ssp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tv_already"
        app:layout_constraintStart_toEndOf="@+id/tv_already"
        app:layout_constraintTop_toBottomOf="@+id/iv_next"
        app:layout_constraintTop_toTopOf="@+id/iv_next"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
